--- a/glossary.Rmd
+++ b/glossary.Rmd
@@ -2,8 +2,127 @@
 title: "Glossary"
 output:
   html_document:
+    number_sections: yes
     toc: yes
     toc_float: yes
 ---
 
-Coming Soon!
+**More Coming Soon!**
+
+# Boundary Definitions
+
+Alternative `boundary.dat` calculations
+
+## Connectivity as Boundary
+
+description
+
+## Minimum Planar Graph
+
+description
+
+# Connectivity
+
+description (with units)
+
+## Connectivity Categories
+
+### Demographic Connectivity
+
+description
+
+### Genetic Connectivity
+
+description
+
+### Landscape Connectivity
+
+description
+
+## Connectivity Types
+
+Each connectivity category has multiple types of data that can be used by Marxan with Connectivity:
+
+### Settlement
+
+description
+
+### Local Immigration
+
+description
+
+### Dispersal Flux
+
+description
+
+### Migration
+
+description
+
+## Data Formats
+
+Marxan with Connectivity can accept 2 types of connectivity data, Matrices and Lists:
+
+### Connectivity Matrix
+
+|   |   1   |   2   |   3   |   4   |
+|:-:|:-----:|:-----:|:-----:|:-----:|
+| 1 |  0.1  |  0.02 | 0.005 |  0.01 |
+| 2 | 0.006 |  0.2  | 0.007 | 0.009 |
+| 3 |  0.01 | 0.003 |  0.25 |  0.02 |
+| 4 | 0.022 | 0.017 | 0.001 |  0.2  |
+
+### Connectivity List
+
+| id1 | id2 | value |
+|:---:|:---:|:-----:|
+|  1  |  1  |  0.1  |
+|  1  |  2  |  0.02 |
+|  1  |  3  | 0.005 |
+|  1  |  4  |  0.01 |
+
+### Connectivity List with Time
+
+| time | id1 | id2 | value |
+|:----:|:---:|:---:|:-----:|
+|   1  |  1  |  1  |  0.1  |
+|   1  |  1  |  2  |  0.02 |
+|   1  |  1  |  3  | 0.005 |
+|   1  |  1  |  4  |  0.01 |
+
+# Conservation Targets
+
+description
+
+## Vertex Degree
+
+The vertex degree indicates the number of connections for each planning unit
+
+## Betweenness Centrality
+
+Betweenness Centrality is an indicator of a planning unit's centrality in a network. It is equal to the number of shortest paths from all connections to all others that pass through that planning unit.
+
+## Eigen Vector Centrality
+
+Eigen Vector Centrality is a measure of the influence of a planning unit in a network. It assigns relative scores to all planning unitin the network based on the concept that connections to high-scoring planning unit contribute more to the score of the planning unit in question than equal connections to low-scoring nodes
+
+## Self-Recruitment
+
+Self Recruitment is the propotion of new recruits from a planning unit that will stay in that planning unit.
+
+## Temporal Connectivity Correlation
+
+description
+
+# Focus Areas
+
+For some of the connectivity metrics (e.g. Temporal Connectivity Correlation), it is important to consider 'focus areas' for which connectivity should be optimised. Such focus areas could include existing protected areas, important habitat for endangered species, and/or otherwise important habitats for connectivity (e.g. nursery grounds). Marxan with Connectivity assumes that the planning units within the 'focus areas' will otherwise be targeted as normal conservation targets in Marxan. Loading focus areas into Marxan with Connectivity allows users to set conservation targets for the areas that complement the 'focus areas'.
+
+# Planning Units
+
+description
+
+# Shapefile
+
+description
+
