--- a/CONTRIBUTING.Rmd
+++ b/CONTRIBUTING.Rmd
@@ -80,7 +80,7 @@ further defined and clarified by project maintainers.
 ### Enforcement
 
 Instances of abusive, harassing, or otherwise unacceptable behavior may be
-reported by contacting the project team at [remi.daigle@dal.ca]. All
+reported by contacting the project team via [email](mailto:remi.daigle@dal.ca?subject=Marxan%20with%20Connectivity%20enforcement%20issue). All
 complaints will be reviewed and investigated and will result in a response that
 is deemed necessary and appropriate to the circumstances. The project team is
 obligated to maintain confidentiality with regard to the reporter of an incident.
