--- a/glossary.Rmd
+++ b/glossary.Rmd
@@ -65,12 +65,13 @@ Marxan with Connectivity can accept 2 types of connectivity data, Matrices and L
 
 ### Connectivity Matrix
 
-|   |   1   |   2   |   3   |   4   |
-|:-:|:-----:|:-----:|:-----:|:-----:|
-| 1 |  0.1  |  0.02 | 0.005 |  0.01 |
-| 2 | 0.006 |  0.2  | 0.007 | 0.009 |
-| 3 |  0.01 | 0.003 |  0.25 |  0.02 |
-| 4 | 0.022 | 0.017 | 0.001 |  0.2  |
+|     |   1   |   2   |   3   |   4   |  ...  |
+|:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|**1**|  0.1  |  0.02 | 0.005 |  0.01 |  ...  |
+|**2**| 0.006 |  0.2  | 0.007 | 0.009 |  ...  |
+|**3**|  0.01 | 0.003 |  0.25 |  0.02 |  ...  |
+|**4**| 0.022 | 0.017 | 0.001 |  0.2  |  ...  |
+| ... |  ...  |  ...  |  ...  |  ...  |  ...  |
 
 ### Connectivity List
 
@@ -80,6 +81,7 @@ Marxan with Connectivity can accept 2 types of connectivity data, Matrices and L
 |  1  |  2  |  0.02 |
 |  1  |  3  | 0.005 |
 |  1  |  4  |  0.01 |
+| ... | ... |  ...  |
 
 ### Connectivity List with Time
 
@@ -89,8 +91,9 @@ Marxan with Connectivity can accept 2 types of connectivity data, Matrices and L
 |   1  |  1  |  2  |  0.02 |
 |   1  |  1  |  3  | 0.005 |
 |   1  |  1  |  4  |  0.01 |
+|  ... | ... | ... |  ...  |
 
-# Conservation Targets
+# Conservation Feature
 
 description
 
